Align behaviour of search and clear icon, fix border radius

--- a/src/Mapbender/CoreBundle/Resources/public/sass/element/simple_search.scss
+++ b/src/Mapbender/CoreBundle/Resources/public/sass/element/simple_search.scss
@@ -14,39 +14,52 @@
 
     .search-icon {
         position: absolute;
-        left: 10px;
+        left: 15px;
         top: 50%;
         transform: translateY(-50%);
         color: #6c757d;
         z-index: 10;
         pointer-events: none;
     }
+    .input-group > .form-control, .input-group > .dropdown {
+        &:first-child {
+            border-bottom-left-radius: 0.375rem !important;
+            border-top-left-radius: 0.375rem !important;
+        }
+
+        &:last-child, &.no-dropdown {
+            border-bottom-right-radius: 0.375rem !important;
+            border-top-right-radius: 0.375rem !important;
+        }
+    }
 
     .form-control.searchterm {
-        transition: padding 0.2s ease;
-        border-radius: 0.375rem !important;
-
         text-overflow: ellipsis;
 
         &.with-icon {
             padding-left: 28px; // Reduced from 40px to move text closer to the magnifying glass
-            padding-right: 40px; // Increased to maintain total field width
+            padding-right: 36px; // Increased to maintain total field width
         }
 
         &:not(.with-icon) {
             padding-left: 12px;
-            padding-right: 56px; // Increased to maintain total field width when icon is hidden
+            padding-right: 36px; // Increased to maintain total field width when icon is hidden
         }
     }
 
     .button-close {
-        margin-right: 5rem;
+        z-index: 5;
+        margin-right: 2.8rem;
         background-color: $backgroundColor;
-        padding: 0px;
+        padding: 0;
+
+        &:last-child {
+            margin-right: .7rem;
+        }
     }
 
     .dropdown:not(.bs-dropdown) {
-        margin-left: 0px;
+        margin-left: 0;
         border: 1px solid #dee2e6;
         background: $backgroundColor;
         text-align: left;
